--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		</div><!--center-->
 	</div><!--header-->
 
-	<div class="container-banner" />
-		<div class="center"/>
+	<div class="container-banner" >
+		<div class="center">
 
 			<div>
 				<div class="container-list">
@@ -43,7 +43,7 @@
 			</div>
 
 			<div>
-				<div class="form" />
+				<div class="form">
 					<h2>Preencha o formulário e inicie a sua caminhada 
 					para virar um webmaster</h2>
 
@@ -150,7 +150,7 @@
 		<p>Fortaleza - CE - Brasil </p>
 		<div reg>
 			<ul>
-				<li style=""><a style="color:#23d0f3;text-decoration: none;" href="https://github.com/DevProCanidia">Desenvolvido por Canidia</a></li>
+				<li><a style="color:#23d0f3;text-decoration: none;" href="https://github.com/DevProCanidia">Desenvolvido por DevProCanidia</a></li>
 			</ul>
 			
 		</div>
